<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="_31_05_1988">31.05.1988</string>
    <string name="selected_date">Selected Date</string>
    <string name="_14000000">14000000</string>
    <string name="selected_date_2">Selected Date</string>
    <string name="age">AGE</string>
    <string name="calculate_your">CALCULATE YOUR</string>
</resources>